Corrected alignment issue in About
Corrected vertical alignment issue for q in About page.

--- a/styles/about.css
+++ b/styles/about.css
@@ -10,6 +10,9 @@
 	width: 75%;
 	text-align: left;
 }
+#AboutContent > div > q {
+	vertical-align: text-bottom;
+}
 #ContactDetails {
 	text-align: center;
 	margin-top: 50px;
